--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,9 +5,8 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.10"
 dependencies = [
-    "bitmath>=1.3.3.1",
     "lmdb>=1.5.1",
-    "progressbar>=2.5",
+    "pysimdjson>=6.0.2",
 ]
 
 [project.scripts]
@@ -114,7 +113,7 @@ exclude = ["docs", "tests"]
 
 [[tool.mypy.overrides]]
 module = [
-  "bitmath.*",
+  "lmdb.*",
 ]
 ignore_missing_imports = true
 
