--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.10"
 dependencies = [
+    "alive-progress>=3.2.0",
     "lmdb>=1.5.1",
     "pysimdjson>=6.0.2",
 ]
