--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ dependencies = [
     "requests>=2.32.3",
     "requests-ratelimiter>=0.7.0",
     "retryhttp>=1.1.0",
+    "tenacity>=9.0.0",
 ]
 
 [project.scripts]
