--- a/pyproject.toml
+++ b/pyproject.toml
@@ -47,6 +47,7 @@ dev-dependencies = [
   "ruff>=0.6.7",
   "sp-repo-review[cli]>=2024.8.19",
   "types-requests>=2.32.0.20241016",
+  "pytest-datadir>=1.5.0",
 ]
 
 # until uv gets a task runner
