--- a/pyproject.toml
+++ b/pyproject.toml
@@ -65,6 +65,11 @@ dev-dependencies = [
   "pytest-datadir>=1.5.0",
 ]
 
+[[tool.uv.index]]
+name = "testpypi"
+url = "https://test.pypi.org/simple/"
+publish-url = "https://test.pypi.org/legacy/"
+
 # until uv gets a task runner
 [tool.poe.tasks]
 test = "uv run pytest --cov --cov-report term-missing"
